--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "d3": "^5.9.2",
+    "parse": "^2.3.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
